# bcore

./: CLAUDE.md  CMakeLists.txt  EXPERIENCES.md  README.md
.github/: emu-ignore.txt
.github/workflows/: ci.yml
cmake/: BfinToolchain.cmake
include/: core.h  cpu_state.h  mem.h  mmr.h
src/: bb_translator.cpp  bb_translator.h  cec.cpp  cec.h  core.cpp  cpu_state.cpp  decoder.h  disasm_visitor.cpp  disasm_visitor.h  evt.cpp  evt.h  instruction16.def.h  instruction32.def.h  jit_engine.cpp  jit_engine.h  lift_visitor.cpp  lift_visitor.h  memory.cpp  syscall_emu.cpp  syscall_emu.h
src/utils/: signextend.h
tests/: run_comparison_test.py  run_emu_test.py
tests/benchmarks/: bench.s
tools/: disasm.cpp  emu.cpp  flat_memory.h
